navigation bar active line

--- a/personal.html
+++ b/personal.html
@@ -13,10 +13,6 @@
   </head>
 
   <style>
-    * {
-      box-sizing: border-box;
-    }
-    
     .intro {
       padding: 0 70px;
       padding-top: 5px;
@@ -73,10 +69,22 @@
     <header>
       <nav class="nav_bar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
-          <li><a href="personal.html">Personal</a></li>
+          <li>
+            <a href="index.html">Home</a>
+            <hr class="nav_line" style="opacity:0;">
+          </li>
+          <li>
+            <a href="resume.html">Resume</a>
+            <hr class="nav_line"  style="opacity:0;">
+          </li>
+          <!-- <li>
+            <a href="portfolio.html">Portfolio</a>
+            <hr class="nav_line" style="opacity:0;">
+          </li> -->
+          <li>
+            <a href="personal.html">Personal</a>
+            <hr class="nav_line">
+          </li>
         </ul>
       </nav>
     </header>
