--- a/resume.html
+++ b/resume.html
@@ -13,10 +13,6 @@
   </head>
   
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     .responsive {
       padding: 0 70px;
       padding-bottom: 20px;
@@ -77,12 +73,22 @@
   <body>
     <header>
       <nav class="nav_bar">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
-          <li><a href="personal.html">Personal</a></li>
-        </ul>
+        <li>
+          <a href="index.html">Home</a>
+          <hr class="nav_line" style="opacity:0;">
+        </li>
+        <li>
+          <a href="resume.html">Resume</a>
+          <hr class="nav_line">
+        </li>
+        <!-- <li>
+          <a href="portfolio.html">Portfolio</a>
+          <hr class="nav_line" style="opacity:0;">
+        </li> -->
+        <li>
+          <a href="personal.html">Personal</a>
+          <hr class="nav_line" style="opacity:0;">
+        </li>
       </nav>
     </header>
     
