--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <hr class="nav_line" style="opacity:0;">
           </li>
           <!-- <li>
-            <a href="portfolio.html">Portfolio</a>
+            <a href="projects.html">Projects</a>
             <hr class="nav_line" style="opacity:0;">
           </li> -->
           <li>
-            <a href="personal.html">Personal</a>
+            <a href="exploration.html">Exploration</a>
             <hr class="nav_line" style="opacity:0;">
           </li>
         </ul>
@@ -56,7 +56,7 @@
         
         <hr class="intro_line">
         
-        <h3 style="margin-top:35px; margin-bottom:10px;">
+        <h3 style="margin-top:35px; margin-bottom:10px; text-decoration:none;">
           jamieq.yuan@mail.utoronto.ca
         </h3>
         <h3 style="margin-top:15px; margin-bottom:100px;">
