--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         
         <hr class="intro_line">
         
-        <h3 style="margin-top:35px; margin-bottom:10px; text-decoration:none;">
+        <h3 style="margin-top:35px; margin-bottom:10px; text-decoration:none !important;">
           jamieq.yuan@mail.utoronto.ca
         </h3>
         <h3 style="margin-top:15px; margin-bottom:100px;">
