--- a/exploration.html
+++ b/exploration.html
@@ -24,10 +24,10 @@
             <a href="resume.html">Resume</a>
             <hr class="nav_line"  style="opacity:0;">
           </li>
-          <!-- <li>
+          <li>
             <a href="projects.html">Projects</a>
             <hr class="nav_line" style="opacity:0;">
-          </li> -->
+          </li>
           <li>
             <a href="exploration.html">Exploration</a>
             <hr class="nav_line">
@@ -50,9 +50,9 @@
         <h3 style="margin-top:12px;">
           Representing Team Canada in Salzburg, Austria
         </h3>
-        <h4 style="margin-top:5px;">
+        <h3 style="margin-top:5px; font-size:15px;">
           Photo by Bert Egelmeers from Skate Synchro Photo
-        </h4>
+        </h3>
       </div>
       
       <div class="captioned" style="margin-top:60px;">
