--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="/styles.css" />
     <script src="/script.js" defer></script>
   </head>
@@ -32,6 +33,10 @@
           <hr class="nav_line" style="opacity:0;">
         </li>
       </nav>
+
+      <div class="nav_menu">
+        <span class="menu material-symbols-rounded">menu</span>
+      </div>
     </header>
     
     <main>
@@ -39,7 +44,7 @@
         <h1>Resume</h1>
       </div>
       
-      <div class="body">
+      <div class="body" id="resume_body">
         <h2 style="margin-top:20px;">
           Education
         </h2>
