--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
       </nav>
 
       <div class="nav_menu">
-        <span class="menu material-symbols-rounded">menu</span>
+        <span class="hamb material-symbols-rounded">menu</span>
       </div>
     </header>
 
