--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
       </nav>
 
       <div class="nav_menu">
-        <span class="menu material-symbols-rounded">menu</span>
+        <span class="hamb material-symbols-rounded">menu</span>
       </div>
     </header>
     
