updated images and resume

--- a/exploration.html
+++ b/exploration.html
@@ -45,24 +45,42 @@
       <div class="header">
         <h1>Exploration</h1>
       </div>
+
+      <div class="body" id="exploration_body" style="text-align:center;">
+        <h2 style="margin-top:20px;">
+          Originally from Minneapolis, Minnesota, I have had the privilege of exploring other regions of the world 
+          as both a University of Toronto student and a Team Canada athlete.
+        </h2>
+      </div>
       
-      <div class="captioned" style="margin-top:80px;">
+      <div class="captioned" style="margin-top:50px;">
         <img
-            src="images/nexxice.jpeg"
+            src="images/nexxice.jpg"
             class="captioned_image"
             alt="NEXXICE Senior Synchronized Skating"
         />
         <h3 style="margin-top:12px;">
-          Representing Team Canada in Salzburg, Austria
+          Competing with NEXXICE Senior in Salzburg, Austria
         </h3>
-        <h3 style="margin-top:5px; font-size:15px;">
+        <h6 style="margin-top:5px;">
           Photo by Bert Egelmeers from Skate Synchro Photo
+        </h6>
+      </div>
+
+      <div class="captioned" style="margin-top:60px;">
+        <img
+            src="images/lift.jpg"
+            class="captioned_image"
+            alt="Splits Lift"
+        />
+        <h3 style="margin-top:12px;">
+          Sightseeing in Milan, Italy
         </h3>
       </div>
       
       <div class="captioned" style="margin-top:60px;">
         <img
-            src="images/hiking.jpeg"
+            src="images/hiking.jpg"
             class="captioned_image"
             alt="Sea to Sky Hiking"
         />
