--- a/resume.html
+++ b/resume.html
@@ -71,12 +71,6 @@
             <h3 style="margin-top:4px;">Post-Secondary Enrollment Options, University of Minnesota Talented Youth Mathematics Program</h3>
           </li>
         </ul>
-            
-        <h2 style="margin-top:35px;">
-          Skills
-        </h2>
-        <hr class="resume_line">
-        <h3>Python, Java, C, Bash, HTML/CSS, JavaScript, React, SQL, Git</h3>
 
         <h2 style="margin-top:35px;">
           Experience
@@ -96,13 +90,23 @@
               hard disc drive component</h3>
           </li>
           <li>
-            <h3 style="margin-top:2px;">Analyzed 128 data points using image processing, machine learning, and data visualization to help 
+            <h3 style="margin-top:4px;">Increased the processing capability of team engineers by a factor of 8 as a 
+              result of automating over 95% of the manual work</h3>
+          </li>
+          <li>
+            <h3 style="margin-top:2px;">Utilized image processing, machine learning, and data visualization to help 
               resolve product development challenges and improve efficiency</h3>
           </li>
           <li>
             <h3 style="margin-top:2px;">Presented ideas and results to multiple functional teams in technical working sessions</p>
           </li>
         </ul>
+
+        <h2 style="margin-top:35px;">
+          Skills
+        </h2>
+        <hr class="resume_line">
+        <h3>Python, Java, C, Bash, HTML/CSS, JavaScript, React, SQL, Git</h3>
 
         <h2 style="margin-top:35px;">
           <a href="https://jamie-yuan.github.io/projects.html">
@@ -142,14 +146,6 @@
         <ul>
           <li>
             <h3 style="margin-top:4px;">Programmed an agent using Python to solve Sokoban and Sudoku puzzles in under 15 seconds</h3>
-          </li>
-        </ul>
-        <h5 style="margin-top:15px;">Analysis of the Pandemic’s Impact on Marriage and Birth Rates</h5>
-        <h3 style="margin-top:2px;">Course Project</h3>
-        <ul>
-          <li>
-            <h3 style="margin-top:4px;">Extracted, analyzed, and graphed data using Python to examine how COVID-19 has affected 
-              major life decision measures in Canada</h3>
           </li>
         </ul>
 
