--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
       <div id="home-header">
         <img
-          src="images/me.jpeg"
+          src="images/me.jpg"
           id="me-img"
           alt="Jamie Yuan"
         />
