--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -66,11 +67,11 @@
         </h3>
         <h3 style="margin-top:15px; margin-bottom:100px;">
           <a href="https://www.linkedin.com/in/jamieyuan" 
-          style="margin-right:12px;">
+          style="margin-right:12px; border-bottom:1px dashed #F5C7A9;">
             LinkedIn
           </a>
           <a href="https://github.com/jamie-yuan" 
-          style="margin-left:12px;">
+          style="margin-left:12px; border-bottom:1px dashed #F5C7A9;">
             GitHub
           </a>
         </h3>
