--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -48,11 +49,11 @@
       
       <div class="body" id="projects_body">
         <h2 style="margin-top:20px;">
-          <a href="https://datathon.healthdatanexus.ai">
+          <a href="https://datathon.healthdatanexus.ai" style="border-bottom:1px dashed #F5C7A9;">
             Toronto Health Datathon Website
           </a>
         </h2>
-        <h3>
+        <h3 style="margin-top:3px">
           Organizing Committee, Technology Team
         </h3>
         <h4 style="margin-top:10px;">
@@ -91,11 +92,11 @@
         </h4>
 
         <h2 style="margin-top:50px;">
-          <a href="https://github.com/jamie-yuan/pandemic-marriages-births">
+          <a href="https://github.com/jamie-yuan/pandemic-marriages-births" style="border-bottom:1px dashed #F5C7A9;">
             Analysis of the Pandemic’s Impact on Marriage and Birth Rates
           </a>
         </h2>
-        <h3>
+        <h3 style="margin-top:3px;">
           Course Project
         </h3>
         <h4 style="margin-top:10px; margin-bottom:80px;">
