--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -49,7 +52,7 @@
       
       <div class="body" id="projects_body">
         <h2 style="margin-top:20px;">
-          <a href="https://datathon.healthdatanexus.ai" style="border-bottom:1px dashed #F5C7A9;">
+          <a href="https://datathon.healthdatanexus.ai" style="border-bottom:1.5px dashed #F5C7A9;">
             Toronto Health Datathon Website
           </a>
         </h2>
@@ -92,7 +95,7 @@
         </h4>
 
         <h2 style="margin-top:50px;">
-          <a href="https://github.com/jamie-yuan/pandemic-marriages-births" style="border-bottom:1px dashed #F5C7A9;">
+          <a href="https://github.com/jamie-yuan/pandemic-marriages-births" style="border-bottom:1.5px dashed #F5C7A9;">
             Analysis of the Pandemic’s Impact on Marriage and Birth Rates
           </a>
         </h2>
