--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -107,7 +110,7 @@
           Skills
         </h2>
         <hr class="resume_line">
-        <h3>Python, Java, C, Bash, HTML/CSS, JavaScript, React, SQL, Git</h3>
+        <h3>Python, C, Bash, Java, HTML/CSS, JavaScript, React, SQL, Git</h3>
 
         <h2 style="margin-top:35px;">
           <a href="https://jamie-yuan.github.io/projects.html">
@@ -119,7 +122,7 @@
         <h3 style="margin-top:2px;">Organizing Committee, Technology Team</h3>
         <ul>
           <li>
-            <h3 style="margin-top:4px;">Build a responsive website using React and Figma, to attract students, professionals, 
+            <h3 style="margin-top:4px;">Built a responsive website using React and Figma, to attract students, professionals, 
               and sponsors</h3>
           </li>
         </ul>
