--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/styles.css" />
     <script src="/script.js" defer></script>
   </head>
@@ -54,7 +58,7 @@
         </h1>
       </div>
       
-      <div class="body" style="text-align:center;">
+      <div class="body" id="intro_body" style="text-align:center;">
         <h2>
           I am an undergraduate student at the University of Toronto studying Computer Science, 
           anticipating to graduate in Spring 2025.
@@ -66,13 +70,13 @@
           jamieq.yuan@mail.utoronto.ca
         </h3>
         <h3 style="margin-top:15px; margin-bottom:100px;">
-          <a href="https://www.linkedin.com/in/jamieyuan" 
-          style="margin-right:12px; border-bottom:1px dashed #F5C7A9;">
-            LinkedIn
+          <a href="https://linkedin.com/in/jamieyuan" 
+            class="fa fa-linkedin"
+            style="margin-right:8px;">
           </a>
           <a href="https://github.com/jamie-yuan" 
-          style="margin-left:12px; border-bottom:1px dashed #F5C7A9;">
-            GitHub
+            class="fa fa-github"
+            style="margin-left:8px;">
           </a>
         </h3>
           
