--- a/exploration.html
+++ b/exploration.html
@@ -52,7 +52,7 @@
 
       <div class="body" id="exploration_body" style="text-align:center;">
         <h2 style="margin-top:20px;">
-          Originally from Minneapolis, Minnesota, I have had the privilege of exploring countries around the world 
+          Originally from Minneapolis, Minnesota, I have had the privilege of exploring countries from around the world 
           as both a University of Toronto student and a Team Canada athlete.
         </h2>
       </div>
@@ -68,6 +68,20 @@
         </h3>
         <h6 style="margin-top:5px;">
           Photo by Bert Egelmeers from Skate Synchro Photo
+        </h6>
+      </div>
+
+      <div class="captioned" style="margin-top:60px;">
+        <img
+            src="images/death_spiral.jpg"
+            class="captioned_image"
+            alt="Death Spiral"
+        />
+        <h3 style="margin-top:12px;">
+          Winning the 2023 Canadian National Champion title
+        </h3>
+        <h6 style="margin-top:5px;">
+          Photo by Danielle Earl from Danielle Earl Photography
         </h6>
       </div>
 
