--- a/exploration.html
+++ b/exploration.html
@@ -52,8 +52,8 @@
 
       <div class="body" id="exploration_body" style="text-align:center;">
         <h2 style="margin-top:20px;">
-          Originally from Minneapolis, Minnesota, I have had the privilege of exploring countries from around the world 
-          as both a University of Toronto student and a Team Canada athlete.
+          Originally from Minneapolis, Minnesota, I have had the privilege of exploring the world as both a 
+          University of Toronto student and a Team Canada athlete.
         </h2>
       </div>
       
@@ -78,7 +78,7 @@
             alt="Death Spiral"
         />
         <h3 style="margin-top:12px;">
-          Winning the 2023 Canadian National Champion title
+          Winning the 2023 Canadian National Championships
         </h3>
         <h6 style="margin-top:5px;">
           Photo by Danielle Earl from Danielle Earl Photography
