--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <hr class="home_line">
         
         <h3 style="margin-top:35px; margin-bottom:10px;">
-          jamieq.yuan@mail.utoronto.ca
+          jamie.q.yuan@gmail.com
         </h3>
         <h3 style="margin-top:15px; margin-bottom:100px;">
           <a href="https://linkedin.com/in/jamieyuan" 
