--- a/projects.html
+++ b/projects.html
@@ -52,6 +52,18 @@
       
       <div class="body" id="projects_body">
         <h2 style="margin-top:20px;">
+          Meeting Scheduler
+        </h2>
+        <h3>
+          Web Programming Course Project
+        </h3>
+        <h4 style="margin-top:10px;">
+          A web application developed using React and Django for scheduling one-on-one meetings with different 
+          groups of users. Allows users to manage contacts, enter available time slots, view suggested schedules, 
+          and finalize meeting times. Deployed on AWS EC2.
+        </h4>
+
+        <h2 style="margin-top:50px;">
           <a href="https://datathon.healthdatanexus.ai" style="border-bottom:1.5px dashed #F5C7A9;">
             Toronto Health Datathon Website
           </a>
@@ -71,7 +83,7 @@
         </h3>
         <h4 style="margin-top:10px;">
           A Java application that allows users to meet other university students. Includes functionality for 
-          logging in, maintaining a profile, being connected with other users, and liking/passing on connections.
+          logging in, maintaining a profile, getting connected with other users, and liking/passing on connections.
         </h4>
 
         <h2 style="margin-top:50px;">
@@ -103,7 +115,7 @@
           Course Project
         </h3>
         <h4 style="margin-top:10px; margin-bottom:80px;">
-          Extracts, analyzes, and graphs data to examine how COVID-19 has affected major life decision measures in Canada.
+          A computational exploration of how COVID-19 has affected major life decision measures in Canada.
         </h4>
       </div>
     </main>
