--- a/resume.html
+++ b/resume.html
@@ -81,6 +81,14 @@
         </h2>
         <hr class="resume_line">
         <div class="resume_split">
+          <h5 style="margin-right:15px;">Systems Development Engineer Intern</h5>
+          <h5 style="margin-left:15px; text-align: right;">May-August 2024</h5>
+        </div>
+        <div class="resume_split" style="margin-top:2px;">
+          <h3 style="margin-right:15px;">Amazon Web Services (AWS)</h3>
+          <h3 style="margin-left:15px; text-align: right;">Raleigh, NC</h3>
+        </div>
+        <div class="resume_split" style="margin-top:18px;">
           <h5 style="margin-right:15px;">Software Engineering Intern</h5>
           <h5 style="margin-left:15px; text-align: right;">May-August 2023</h5>
         </div>
@@ -90,8 +98,8 @@
         </div>
         <ul>
           <li>
-            <h3 style="margin-top:4px;">Developed a Python program to locate and analyze critical features of a 
-              hard disc drive component</h3>
+            <h3 style="margin-top:4px;">Developed a Python program to locate and analyze multiple critical features of a 
+              hard disk drive component</h3>
           </li>
           <li>
             <h3 style="margin-top:4px;">Increased the processing capability of team engineers by a factor of 8 as a 
@@ -99,7 +107,7 @@
           </li>
           <li>
             <h3 style="margin-top:2px;">Utilized image processing, machine learning, and data visualization to help 
-              resolve product development challenges and improve efficiency</h3>
+              resolve product development challenges</h3>
           </li>
           <li>
             <h3 style="margin-top:2px;">Presented ideas and results to multiple functional teams in technical working sessions</p>
@@ -110,7 +118,7 @@
           Skills
         </h2>
         <hr class="resume_line">
-        <h3>Python, C, Bash, Java, HTML/CSS, JavaScript, React, SQL, Git</h3>
+        <h3>Python, C, Bash, Java, SQL, HTML/CSS, JavaScript, React, Django, REST APIs, Git</h3>
 
         <h2 style="margin-top:35px;">
           <a href="https://jamie-yuan.github.io/projects.html">
@@ -118,23 +126,12 @@
           </a>
         </h2>
         <hr class="resume_line">
-        <h5>Toronto Health Datathon Website</h5>
-        <h3 style="margin-top:2px;">Organizing Committee, Technology Team</h3>
+        <h5>Meeting Scheduler</h5>
+        <h3 style="margin-top:2px;">Web Programming Course Project</h3>
         <ul>
           <li>
-            <h3 style="margin-top:4px;">Built a responsive website using React and Figma, to attract students, professionals, 
-              and sponsors</h3>
-          </li>
-        </ul>
-        <h5 style="margin-top:15px;">Student Networking App</h5>
-        <h3 style="margin-top:2px;">Software Design Course Project</h3>
-        <ul>
-          <li>
-            <h3 style="margin-top:4px;">Collaborated with 5 peers to design and develop a Java application that allows users 
-              to meet other university students</h3>
-          </li>
-          <li>
-            <h3 style="margin-top:2px;">Implemented 6 features while applying design principles, utilizing Git, and contributing to code reviews</h3>
+            <h3 style="margin-top:4px;">Collaborated with 3 peers to design and develop a React and Django web application that 
+              helps users schedule one-on-one meetings with different groups of users, and deployed the application on AWS EC2</h3>
           </li>
         </ul>
         <h5 style="margin-top:15px;">Image Filtering Server</h5>
@@ -154,14 +151,14 @@
         </ul>
 
         <h2 style="margin-top:35px;">
-          Other
+          Interests
         </h2>
         <hr class="resume_line">
         <div class="resume_split">
-          <h5 style="margin-right:15px;">Team Canada NEXXICE Synchronized Skating Team</h5>
+          <h5 style="margin-right:15px;">Team Canada NEXXICE Senior Synchronized Skating Team</h5>
           <h5 style="margin-left:15px; text-align: right;">July 2021 - April 2023</h5>
         </div>
-        <h3 style="margin-top:2px;">Senior Team Member</h3>
+        <h3 style="margin-top:2px;">Team Member</h3>
         <ul>
           <li>
             <h3 style="margin-top:4px; margin-bottom:80px;">Represented Team Canada at international competitions and the World Synchronized Skating Championships</h3>
