--- a/projects.html
+++ b/projects.html
@@ -63,6 +63,8 @@
           and finalize meeting times. Deployed on AWS EC2.
         </h4>
 
+        <hr class="projects_line">
+
         <h2 style="margin-top:50px;">
           <a href="https://datathon.healthdatanexus.ai" style="border-bottom:1.5px dashed #F5C7A9;">
             Toronto Health Datathon Website
@@ -75,6 +77,8 @@
           A responsive website built using React and Figma to attract students, professionals, and sponsors.
         </h4>
 
+        <hr class="projects_line">
+
         <h2 style="margin-top:50px;">
           Student Networking App
         </h2>
@@ -86,6 +90,8 @@
           logging in, maintaining a profile, getting connected with other users, and liking/passing on connections.
         </h4>
 
+        <hr class="projects_line">
+
         <h2 style="margin-top:50px;">
           Image Filtering Server
         </h2>
@@ -96,6 +102,8 @@
           A web server built using C that allows users to upload and filter images, selecting from 5 implemented filters.
         </h4>
 
+        <hr class="projects_line">
+
         <h2 style="margin-top:50px;">
           AI Puzzle-Solving Agent
         </h2>
@@ -105,6 +113,8 @@
         <h4 style="margin-top:10px;">
           An agent programmed in Python that can solve Sokoban and Sudoku puzzles in under 15 seconds.
         </h4>
+
+        <hr class="projects_line">
 
         <h2 style="margin-top:50px;">
           <a href="https://github.com/jamie-yuan/pandemic-marriages-births" style="border-bottom:1.5px dashed #F5C7A9;">
