--- a/resume.html
+++ b/resume.html
@@ -55,14 +55,14 @@
         <hr class="resume_line">
         <div class="resume_split">
           <h5 style="margin-right:15px;">University of Toronto, St. George</h5>
-          <h5 style="margin-left:15px; text-align: right;">September 2021 - June 2025</h5>
+          <h5 style="margin-left:15px; text-align: right;">September 2021 - May 2025</h5>
         </div>
         <h3 style="margin-top:2px;">Pursuing an Honours Bachelor of Science in Computer Science</h3>
         <ul>
           <li>
-            <h3 style="margin-top:4px;">Relevant coursework: Algorithm Design, Analysis, and Complexity | Data Structures | 
-              Software Design | Operating Systems | Databases | Artificial Intelligence | Linear Algebra | 
-              Probability, Statistics, and Data Analysis</h3>
+            <h3 style="margin-top:4px;">Relevant coursework: Data Structures and Algorithms, Software Design, 
+              Operating Systems, Systems Programming, Computer Organization, Databases, Artificial Intelligence, 
+              Linear Algebra, Probability and Statistics</h3>
           </li>
         </ul>
         <div class="resume_split" style="margin-top:18px;">
@@ -88,6 +88,20 @@
           <h3 style="margin-right:15px;">Amazon Web Services (AWS)</h3>
           <h3 style="margin-left:15px; text-align: right;">Raleigh, NC</h3>
         </div>
+        <ul>
+          <li>
+            <h3 style="margin-top:4px;">Developed a debugging tool using Lua and C++ for PCIe in AWS machine learning 
+              accelerators</h3>
+          </li>
+          <li>
+            <h3 style="margin-top:4px;">Created a CoAP endpoint to capture and emit comprehensive metrics to improve 
+              debugging ability</h3>
+          </li>
+          <li>
+            <h3 style="margin-top:2px;">Collaborated with systems and firmware teams within Annapurna Labs to integrate 
+              the tool into chip firmware</h3>
+          </li>
+        </ul>
         <div class="resume_split" style="margin-top:18px;">
           <h5 style="margin-right:15px;">Software Engineering Intern</h5>
           <h5 style="margin-left:15px; text-align: right;">May-August 2023</h5>
@@ -109,16 +123,13 @@
             <h3 style="margin-top:2px;">Utilized image processing, machine learning, and data visualization to help 
               resolve product development challenges</h3>
           </li>
-          <li>
-            <h3 style="margin-top:2px;">Presented ideas and results to multiple functional teams in technical working sessions</p>
-          </li>
         </ul>
 
         <h2 style="margin-top:35px;">
           Skills
         </h2>
         <hr class="resume_line">
-        <h3>Python, C, Bash, Java, SQL, HTML/CSS, JavaScript, React, Django, REST APIs, Git</h3>
+        <h3>Python, C, Lua, Bash, Java, SQL, HTML/CSS, JavaScript, React, Django, REST APIs, Git</h3>
 
         <h2 style="margin-top:35px;">
           <a href="https://jamie-yuan.github.io/projects.html">
