--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       
       <div class="body" id="intro_body" style="text-align:center;">
         <h2>
-          I am an undergraduate student at the University of Toronto studying Computer Science, 
+          I am an undergraduate computer science student at the University of Toronto, 
           anticipating to graduate in Spring 2025.
         </h2>
         
