--- a/exploration.html
+++ b/exploration.html
@@ -52,7 +52,7 @@
 
       <div class="body" id="exploration_body" style="text-align:center;">
         <h2 style="margin-top:20px;">
-          Originally from Minneapolis, Minnesota, I have had the privilege of exploring the world as both a 
+          Originally from Minneapolis, MN, I have had the privilege of exploring the world as both a 
           University of Toronto student and a Team Canada athlete.
         </h2>
       </div>
