--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       
       <div class="body" id="intro_body" style="text-align:center;">
         <h2>
-          I am an undergraduate computer science student at the University of Toronto, 
-          anticipating to graduate in Spring 2025.
+          I am an undergraduate Computer Science student focusing in Computer Systems 
+          at the University of Toronto, anticipating to graduate in Spring 2025.
         </h2>
         
         <hr class="home_line">
