--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
         <h3 style="margin-top:2px;">Pursuing an Honours Bachelor of Science in Computer Science</h3>
         <ul>
           <li>
-            <h3 style="margin-top:4px;">Relevant coursework: Data Structures and Algorithms, Software Design, 
+            <h3 style="margin-top:4px;">Relevant coursework: Data Structures and Algorithms, Scalable Computing, 
               Operating Systems, Systems Programming, Computer Organization, Databases, Artificial Intelligence, 
               Linear Algebra, Probability and Statistics</h3>
           </li>
@@ -129,7 +129,7 @@
           Skills
         </h2>
         <hr class="resume_line">
-        <h3>Python, C, Lua, Bash, Java, SQL, HTML/CSS, JavaScript, React, Django, REST APIs, Git</h3>
+        <h3>Python, C, Lua, Java, Bash, Racket, Haskell, SQL, HTML/CSS, JavaScript, React, Django, REST APIs, Git</h3>
 
         <h2 style="margin-top:35px;">
           <a href="https://jamie-yuan.github.io/projects.html">
