--- a/exploration.html
+++ b/exploration.html
@@ -29,10 +29,10 @@
             <a href="resume.html">Resume</a>
             <hr class="nav_line"  style="opacity:0;">
           </li>
-          <li>
+          <!-- <li>
             <a href="projects.html">Projects</a>
             <hr class="nav_line" style="opacity:0;">
-          </li>
+          </li> -->
           <li>
             <a href="exploration.html">Exploration</a>
             <hr class="nav_line">
@@ -118,12 +118,12 @@
               alt="Cannon Beach Rock"
           />
           <img
-              src="images/buildings.jpeg"
-              alt="Downtown Buildings"
-          />
-          <img
               src="images/park.jpeg"
               alt="Garden"
+          />
+          <img
+              src="images/buildings.jpeg"
+              alt="Downtown Buildings"
           />
         </div>
 
@@ -137,8 +137,8 @@
               alt="Snowy Mountain"
           />
           <img
-              src="images/forest.jpeg"
-              alt="Forest Trees"
+              src="images/flower.jpeg"
+              alt="Flower"
           />
         </div>
           
@@ -152,8 +152,8 @@
               alt="Castle"
           />
           <img
-              src="images/flower.jpeg"
-              alt="Flower"
+              src="images/forest.jpeg"
+              alt="Forest Trees"
           />
         </div>
         
@@ -167,8 +167,8 @@
               alt="Fireworks"
           />
           <img
-              src="images/water.jpeg"
-              alt="Beach Water"
+              src="images/cat.jpeg"
+              alt="Cat"
           />
         </div>
       </div>
