--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <a href="resume.html">Resume</a>
             <hr class="nav_line" style="opacity:0;">
           </li>
-          <li>
+          <!-- <li>
             <a href="projects.html">Projects</a>
             <hr class="nav_line" style="opacity:0;">
-          </li>
+          </li> -->
           <li>
             <a href="exploration.html">Exploration</a>
             <hr class="nav_line" style="opacity:0;">
@@ -60,8 +60,7 @@
       
       <div class="body" id="intro_body" style="text-align:center;">
         <h2>
-          I am an undergraduate Computer Science student focusing in Computer Systems 
-          at the University of Toronto, anticipating to graduate in Spring 2025.
+          I am a University of Toronto Computer Science graduate, with a focus in Computer Systems.
         </h2>
         
         <hr class="home_line">
