--- a/resume.html
+++ b/resume.html
@@ -28,10 +28,10 @@
           <a href="resume.html">Resume</a>
           <hr class="nav_line">
         </li>
-        <li>
+        <!-- <li>
           <a href="projects.html">Projects</a>
           <hr class="nav_line" style="opacity:0;">
-        </li>
+        </li> -->
         <li>
           <a href="exploration.html">Exploration</a>
           <hr class="nav_line" style="opacity:0;">
@@ -50,37 +50,18 @@
       
       <div class="body" id="resume_body">
         <h2 style="margin-top:20px;">
-          Education
-        </h2>
-        <hr class="resume_line">
-        <div class="resume_split">
-          <h5 style="margin-right:15px;">University of Toronto, St. George</h5>
-          <h5 style="margin-left:15px; text-align: right;">September 2021 - May 2025</h5>
-        </div>
-        <h3 style="margin-top:2px;">Pursuing an Honours Bachelor of Science in Computer Science</h3>
-        <ul>
-          <li>
-            <h3 style="margin-top:4px;">Relevant coursework: Data Structures and Algorithms, Scalable Computing, 
-              Operating Systems, Systems Programming, Computer Organization, Databases, Artificial Intelligence, 
-              Linear Algebra, Probability and Statistics</h3>
-          </li>
-        </ul>
-        <div class="resume_split" style="margin-top:18px;">
-          <h5 style="margin-right:15px;">University of Minnesota, Twin Cities</h5>
-          <h5 style="margin-left:15px; text-align: right;">September 2017 - May 2021</h5>
-        </div>
-        <h3 style="margin-top:2px;">High School Dual Enrollment</h3>
-        <ul>
-          <li>
-            <h3 style="margin-top:4px;">Post-Secondary Enrollment Options, University of Minnesota Talented Youth Mathematics Program</h3>
-          </li>
-        </ul>
-
-        <h2 style="margin-top:35px;">
           Experience
         </h2>
         <hr class="resume_line">
         <div class="resume_split">
+          <h5 style="margin-right:15px;">Systems Development Engineer</h5>
+          <h5 style="margin-left:15px; text-align: right;">June 2025 - Present</h5>
+        </div>
+        <div class="resume_split" style="margin-top:2px;">
+          <h3 style="margin-right:15px;">Amazon Web Services (AWS)</h3>
+          <h3 style="margin-left:15px; text-align: right;">Austin, TX</h3>
+        </div>
+        <div class="resume_split" style="margin-top:18px;">
           <h5 style="margin-right:15px;">Systems Development Engineer Intern</h5>
           <h5 style="margin-left:15px; text-align: right;">May-August 2024</h5>
         </div>
@@ -126,10 +107,36 @@
         </ul>
 
         <h2 style="margin-top:35px;">
+          Education
+        </h2>
+        <hr class="resume_line">
+        <div class="resume_split">
+          <h5 style="margin-right:15px;">University of Toronto, St. George</h5>
+          <h5 style="margin-left:15px; text-align: right;">September 2021 - May 2025</h5>
+        </div>
+        <h3 style="margin-top:2px;">Honours Bachelor of Science in Computer Science, Focus in Computer Systems</h3>
+        <ul>
+          <li>
+            <h3 style="margin-top:4px;">Relevant coursework: Systems Programming, Computer Architecture, Computer Networks, Operating Systems, 
+              Scalable Computing, Data Structures and Algorithms, Software Design, Artificial Intelligence</h3>
+          </li>
+        </ul>
+        <div class="resume_split" style="margin-top:18px;">
+          <h5 style="margin-right:15px;">University of Minnesota, Twin Cities</h5>
+          <h5 style="margin-left:15px; text-align: right;">September 2017 - May 2021</h5>
+        </div>
+        <h3 style="margin-top:2px;">High School Dual Enrollment</h3>
+        <ul>
+          <li>
+            <h3 style="margin-top:4px;">Post-Secondary Enrollment Options, University of Minnesota Talented Youth Mathematics Program</h3>
+          </li>
+        </ul>
+
+        <h2 style="margin-top:35px;">
           Skills
         </h2>
         <hr class="resume_line">
-        <h3>Python, C, Lua, Java, Bash, Racket, Haskell, SQL, HTML/CSS, JavaScript, React, Django, REST APIs, Git</h3>
+        <h3>Python, C/C++, Lua, Java, Bash, MIPS Assembly, SQL, Git</h3>
 
         <h2 style="margin-top:35px;">
           <a href="https://jamie-yuan.github.io/projects.html">
@@ -137,27 +144,20 @@
           </a>
         </h2>
         <hr class="resume_line">
-        <h5>Meeting Scheduler</h5>
+        <h5>Proxy Server for URL Shortener</h5>
+        <h3 style="margin-top:2px;">Scalable Computing Course Project</h3>
+        <ul>
+          <li>
+            <h3 style="margin-top:4px;">Built a multithreaded Java program for a scalable URL shortening system that handles load balancing 
+              through data partitioning and replication, resulting in a performance of 1000 HTTP requests/sec</h3>
+          </li>
+        </ul>
+        <h5 style="margin-top:15px;">Meeting Scheduler</h5>
         <h3 style="margin-top:2px;">Web Programming Course Project</h3>
         <ul>
           <li>
             <h3 style="margin-top:4px;">Collaborated with 3 peers to design and develop a React and Django web application that 
               helps users schedule one-on-one meetings with different groups of users, and deployed the application on AWS EC2</h3>
-          </li>
-        </ul>
-        <h5 style="margin-top:15px;">Image Filtering Server</h5>
-        <h3 style="margin-top:2px;">Systems Programming Course Project</h3>
-        <ul>
-          <li>
-            <h3 style="margin-top:4px;">Built a web server using C that allows users to upload and filter images, selecting from 
-              5 implemented filters</h3>
-          </li>
-        </ul>
-        <h5 style="margin-top:15px;">AI Puzzle-Solving Agent</h5>
-        <h3 style="margin-top:2px;">Artificial Intelligence Course Project</h3>
-        <ul>
-          <li>
-            <h3 style="margin-top:4px;">Programmed an agent using Python to solve Sokoban and Sudoku puzzles in under 15 seconds</h3>
           </li>
         </ul>
 
